add js and some html for mark function

--- a/index.html
+++ b/index.html
@@ -19,45 +19,33 @@
           <button class="btn btn-primary" id="addTaskBtn"> Add Task</button>
 
           <!-- Task reference -->
-          <div class="task">
-            <div class="input-group mb-3">
-              <div class="input-group-text">
-                <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
+          <div class="taskList">
+            <div class="task">
+              <div class="input-group mb-3">
+                <div class="input-group-text">
+                  <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
+                </div>
+                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder="1" disabled>
               </div>
-              <input type="text" class="form-control" aria-label="Text input with checkbox">
+              <button class="btn btn-primary" id="editTask"></button>
+              <button class="btn btn-primary" id="deleteTask"></button>
             </div>
-            <button class="btn btn-primary" id="editTask"></button>
-            <button class="btn btn-primary" id="deleteTask"></button>
+
+            <div class="task">
+              <div class="input-group mb-3">
+                <div class="input-group-text">
+                  <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
+                </div>
+                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder="2" disabled>
+              </div>
+              <button class="btn btn-primary" id="editTask"></button>
+              <button class="btn btn-primary" id="deleteTask"></button>
+            </div>
           </div>
           <!-- Task reference end-->
-          
+
         </div>
       </div>
-      <!-- Here starts header -->
-      <section>
-
-      </section>
-      <!-- Here ends header -->
-
-
-      <!-- Here starts section 1 -->
-      <section>
-
-      </section>
-      <!-- Here ends section 1 -->
-
-
-      <!-- Here starts section 2 -->
-      <section>
-
-      </section>
-      <!-- Here ends section 2 -->
-
-      <!-- Here starts section 3 -->
-      <section>
-
-      </section>
-      <!-- Here ends section 3 -->
 
     </main>
 
