Debug mark as done

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 
           <!-- Task reference -->
           <div class="taskList">
+
             <div class="task">
               <div class="input-group mb-3">
                 <div class="input-group-text">
                   <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
                 </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder="1" disabled>
+                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder="Task 1" disabled>
               </div>
               <button class="btn btn-primary" id="editTask"></button>
               <button class="btn btn-primary" id="deleteTask"></button>
@@ -36,12 +37,24 @@
                 <div class="input-group-text">
                   <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
                 </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder="2" disabled>
+                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder=" task 2" disabled>
               </div>
               <button class="btn btn-primary" id="editTask"></button>
               <button class="btn btn-primary" id="deleteTask"></button>
             </div>
-          </div>
+
+            <div class="task">
+              <div class="input-group mb-3">
+                <div class="input-group-text">
+                  <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
+                </div>
+                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder=" task 3" disabled>
+              </div>
+              <button class="btn btn-primary" id="editTask"></button>
+              <button class="btn btn-primary" id="deleteTask"></button>
+            </div>
+
+        </div>
           <!-- Task reference end-->
 
         </div>
