added icon, added buttonlist as constant, added eventlistener with instruction to remove parent

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder="Task 1" disabled>
               </div>
               <button class="btn btn-primary" id="editTask"></button>
-              <button class="btn btn-primary" id="deleteTask"></button>
+              <button class="btn btn-primary delete_button" id="deleteTask"></button>
             </div>
 
             <div class="task">
@@ -40,7 +40,7 @@
                 <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder=" task 2" disabled>
               </div>
               <button class="btn btn-primary" id="editTask"></button>
-              <button class="btn btn-primary" id="deleteTask"></button>
+              <button class="btn btn-primary delete_button" id="deleteTask"></button>
             </div>
 
             <div class="task">
@@ -51,7 +51,7 @@
                 <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder=" task 3" disabled>
               </div>
               <button class="btn btn-primary" id="editTask"></button>
-              <button class="btn btn-primary" id="deleteTask"></button>
+              <button class="btn btn-primary delete_button" id="deleteTask"></button>
             </div>
 
         </div>
