--- a/index.html
+++ b/index.html
@@ -1,68 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project xyz</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link href="style.css" rel="stylesheet">
-    <script defer src="script.js"></script>
-  </head>
-  <body>
-    <div class="bg"></div>
-    <main class="container w-100">
-      <div class="row justify-content-center align-items-center h-100">
-        <div class="col-6 listWrapper">
-          <h1>To-Do-App</h1>
-          <input type="text" name="" id="taskName">
-          <button class="btn btn-primary" id="addTaskBtn"> Add Task</button>
 
-          <!-- Task reference -->
-          <div class="taskList">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Project xyz</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
+  <link href="style.css" rel="stylesheet" />
+  <script defer src="script.js"></script>
+</head>
 
-            <div class="task">
-              <div class="input-group mb-3">
-                <div class="input-group-text">
-                  <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
-                </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder="Task 1" disabled>
-              </div>
-              <button class="btn btn-primary" id="editTask"></button>
-              <button class="btn btn-primary delete_button" id="deleteTask"></button>
-            </div>
-
-            <div class="task">
-              <div class="input-group mb-3">
-                <div class="input-group-text">
-                  <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
-                </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder=" task 2" disabled>
-              </div>
-              <button class="btn btn-primary" id="editTask"></button>
-              <button class="btn btn-primary delete_button" id="deleteTask"></button>
-            </div>
-
-            <div class="task">
-              <div class="input-group mb-3">
-                <div class="input-group-text">
-                  <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
-                </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder=" task 3" disabled>
-              </div>
-              <button class="btn btn-primary" id="editTask"></button>
-              <button class="btn btn-primary delete_button" id="deleteTask"></button>
-            </div>
-
+<body>
+  <div class="bg"></div>
+  <main class="container w-100">
+    <div class="row justify-content-center align-items-center h-100">
+      <div class="col-6 listWrapper p-4">
+        <h1>To-Do-App</h1>
+        <div class="row">
+          <div class="col-6">
+            <input class="form-control" type="text" name="" id="taskName" />
+          </div>
+          <div class="col-6">
+            <button class="btn btn-primary" id="addTaskBtn">Add Task</button>
+          </div>
         </div>
-          <!-- Task reference end-->
 
+        <div class="taskList">
+          <!-- Task reference -->
+          <div class="task container my-3">
+            <div class="row justify-content-center flex-row flex-wrap align-items-center">
+              <div class="col-9">
+                <div class="input-group">
+                  <div class="input-group-text">
+                    <input class="form-check-input mt-0" type="checkbox" value=""
+                      aria-label="Checkbox for following text input" />
+                  </div>
+                  <input type="text" class="form-control" aria-label="Text input with checkbox" placeholder="Task 1"
+                   disabled />
+                </div>
+              </div>
+              <div class="col-3">
+                <button class="btn btn-primary" id="editTask">
+                  <i class="bi-pencil-square"></i>
+                </button>
+                <button class="btn btn-primary delete_button ms-3" id="deleteTask">
+                  <i class="bi-trash"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Task reference end-->
         </div>
       </div>
+    </div>
+  </main>
 
-    </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+</body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-
-  </body>
 </html>
