--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="taskList">
           <!-- Task reference -->
-          <div class="task container my-3">
+          <!-- <div class="task container my-3">
             <div class="row justify-content-center flex-row flex-wrap align-items-center">
               <div class="col-9">
                 <div class="input-group">
@@ -50,7 +50,7 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- Task reference end-->
         </div>
       </div>
