read and set markTask isDone

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 <body>
   <div class="bg"></div>
   <main class="container w-100">
-    <div class="row justify-content-center align-items-center h-100">
-      <div class="col-6 listWrapper p-4">
+    <div class="row justify-content-center align-items-center rowHeight">
+      <div class="col-6 listWrapper p-5 text-center">
         <h1>To-Do-App</h1>
-        <div class="row">
+        <div class="row mt-5 justify-content-center">
           <div class="col-6">
-            <input class="form-control" type="text" name="" id="taskName" />
+            <input class="form-control" type="text" name="" id="taskName" placeholder="Task Name" />
           </div>
-          <div class="col-6">
+          <div class="col-4">
             <button class="btn btn-primary" id="addTaskBtn">Add Task</button>
           </div>
         </div>
-
-        <div class="taskList">
+        <hr>
+        <div class="taskList mt-5">
           <!-- Task reference -->
           <!-- <div class="task container my-3">
             <div class="row justify-content-center flex-row flex-wrap align-items-center">
