add some functions

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
 
         <div class="taskList">
-          <!-- Task reference -->
-          <!-- <div class="task container my-3">
+          <!--
+          <div class="task container my-3">
             <div class="row justify-content-center flex-row flex-wrap align-items-center">
               <div class="col-9">
                 <div class="input-group">
@@ -50,8 +50,8 @@
                 </button>
               </div>
             </div>
-          </div> -->
-          <!-- Task reference end-->
+          </div>
+          -->
         </div>
       </div>
     </div>
