clean up, debug, deleteAll, deleteItem

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
           <div class="col-6">
             <input class="form-control" type="text" name="" id="taskName" placeholder="Task Name" />
           </div>
-          <div class="col-4">
+          <div class="col-6">
             <button class="btn btn-primary" id="addTaskBtn">Add Task</button>
+            <button class="btn btn-primary" id="deleteAllBtn">Delete All</button>
           </div>
         </div>
         <hr>
